# ecrm-api

./: .env  README.md  alembic.ini  pyproject.toml
migrations/: README  env.py
migrations/bd/: ejecutar_bd.txt  publish.backup  publish_28_06.backup
migrations/versions/: 259d25e976f9_add_publish_tables.py  8dee5cf2a01c_add_crm_tables.py  9b6e921a034b_add_publish_contract_table.py  fe9ff2ebac28_add_initial_table.py
src/ecrm_api/: config.py  main.py  routes.py
src/ecrm_api/core/: auth_bearer.py  config.py  functions_jwt.py  presenters.py  utils.py
src/ecrm_api/core/locale/: en.yml  es.yml
src/ecrm_api/core/persistence/: base.py  db.py
src/ecrm_api/modules/accountingentry/: models.py  routes.py  services.py
src/ecrm_api/modules/accountingentry/presenters/: accrelopecategories.py
src/ecrm_api/modules/accountingentry/routes/: accrelopecategories.py
src/ecrm_api/modules/accountingentry/services/: accrelopecategories.py
src/ecrm_api/modules/crm/models/: commercialgroup.py  commercialgroup_specialist.py  commercialgroup_states.py  commercialgroup_type.py
src/ecrm_api/modules/login/: presenters.py  routes.py  services.py
src/ecrm_api/modules/publishmgr/models/: campaign.py  departament.py  publish_contract.py  specialist.py
src/ecrm_api/modules/publishmgr/presenters/: campaign.py  departament.py  specialist.py
src/ecrm_api/modules/publishmgr/routes/: campaign.py  department.py  specialist.py
src/ecrm_api/modules/publishmgr/services/: campaign.py  departament.py  specialist.py
src/ecrm_api/modules/users/: models.py  presenters.py  routes.py
(+4 files in other folders)
